--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
     "require": {
         "consolidation/robo": "^2.0",
         "sinevia/php-library-registry": "^2.9"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.5"
     }
 }
