--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lesichkov/phpsls",
+    "name": "lesichkovm/phpsls",
     "authors": [
         {
             "name": "Milan Lesichkov",
