--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     ],
     "require": {
         "consolidation/robo": "^2.0",
-        "sinevia/php-library-registry": "^2.9"
+        "sinevia/php-library-registry": "^2.9",
+        "sinevia/php-library-serverless": "^1.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5"
