--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "lesichkovm/phpsls",
+    "license": "proprietary",
     "authors": [
         {
             "name": "Milan Lesichkov",
