--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "lesichkovm/phpsls",
+    "description": "Easily manage working with serverless",
     "license": "proprietary",
     "authors": [
         {
