--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,15 @@
         "clue/phar-composer": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "sinevia/php-library-registry": "^2.9"
     },
     "scripts": {
         "build": [
             "composer update --no-dev; phar-composer build ."
+        ],
+        "test": [
+            "phpunit tests"
         ]
     }
 }
