--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,12 @@
         "phpsls"
     ],
     "require": {
-        "sinevia/php-library-serverless": "^1.9",
-        "clue/phar-composer": "^1.1"
+        "sinevia/php-library-registry": "^2.9",
+        "sinevia/php-library-serverless": "^1.9"
     },
-    "require-dev": {
-        "phpunit/phpunit": "^8.5",
-        "sinevia/php-library-registry": "^2.9"
+    "require-dev": {        
+        "clue/phar-composer": "^1.1",
+        "phpunit/phpunit": "^8.5"
     },
     "scripts": {
         "build": [
