--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "sinevia/php-library-registry": "^2.9",
         "sinevia/php-library-serverless": "^1.9",
-        "sinevia/php-library-utils": "^3.3",
+        "sinevia/php-library-utils": "^3.3"
     },
     "require-dev": {        
         "clue/phar-composer": "^1.1",
